# feedprism

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  feedprism_master_context.md  pyproject.toml
.obsidian/: workspace.json
.rules/: folder_rules.md
feedprism_main/: .dockerignore  .env.example  .gitignore  Dockerfile  requirements.txt
feedprism_main/app/: config.py  main.py
feedprism_main/docs/: benchmarks.md
feedprism_main/notebooks/: phase1_educational_walkthrough.ipynb  phase2_verification.ipynb  phase3_educational_walkthrough.ipynb  phase3_evaluation.ipynb  phase4_educational_walkthrough.ipynb  phase5_educational_walkthrough.ipynb
feedprism_main/scripts/: benchmark_hnsw.py  ingest_and_search.py  ingest_multi_content.py  migrate_to_multi_collection.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
hackathon_details/: Memory Over Models — AI Hackathon Resource Guide.md  sponsor_focus.md
hackathon_details/sumbission/: DEMO_SCRIPT_SHORT.md  DEMO_VIDEO_SCRIPT.md  Script..md  pre_submission_notes.md
junk/feedprism-poc/: .env  poc.ipynb  poc.py  poc_run_summary.md  pyproject.toml  token.json
junk/feedprism-poc/.venv_new/: pyvenv.cfg
junk/feedprism-poc/feedprism_poc.egg-info/: SOURCES.txt  requires.txt
lamatic_bridge/: .env.example  Dockerfile  main.py  requirements.txt
notebooks/: feedprism_demo.ipynb  verify_components.ipynb
project_ops/: PROJECT_STATUS.md
project_ops/01_idea_generation/: 01_product_overview.md  other_momhack_ideas.md  (+4 more)
(+154 files in other folders)
